--- a/package.json
+++ b/package.json
@@ -3,29 +3,46 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.7",
     "@mui/x-data-grid": "^5.17.5",
+    "@popperjs/core": "^2.11.7",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "autoprefixer": "10.4.5",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
-    "popper.js": "^1.16.1",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.7.4",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^4.0.3",
     "recharts": "^2.1.14",
     "sass": "^1.52.3",
+    "save-dev": "^0.0.1-security",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "autoprefixer": "10.4.5",
+    "node-sass": "^8.0.0",
+    "nodemon": "^2.0.7",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.23",
+    "postcss-cli": "^10.1.0",
+    "purgecss": "^5.0.0",
+    "stylelint": "^15.6.0",
+    "stylelint-config-twbs-bootstrap": "^9.0.1"
+  },
   "scripts": {
+    "css-compile": "node-sass --include-path node_modules --output-style compressed --source-map true --source-map-contents true --precision 6 scss -o assets/css/",
+    "css-prefix": "postcss --replace assets/css/app.css --use autoprefixer --map",
+    "css": "npm-run-all css-compile css-prefix",
+    "watch": "nodemon -e html,scss -x \"npm run css\"",
     "start": "react-scripts start",
+    "dev": "npm-run-all start --parallel watch",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
